# azimuth-sdk

./: .gitignore  .stestr.conf  README.md  setup.cfg  tox.ini
.github/workflows/: pypi-publish.yaml
azimuth_sdk/: __init__.py  auth.py  client.py  config.py  exceptions.py
