[metadata]
name = azimuth-sdk
description = SDK for the Azimuth API
long_description = file: README.md
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/azimuth-sdk


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    easykube
